# um-device-tracker

./: Cargo.toml  Dockerfile  README.md  justfile  um_device_tracker_db.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.css  main.tsx
frontend/src/components/pages/: CircuitCreate.tsx  CircuitDashboard.tsx  CircuitDetail.tsx  ErrorPage.tsx  Login.tsx
frontend/src/lib/: types.ts
src/: data.rs  main.rs  model.rs  web.rs
static/: index.html
static/assets/: index-CkdncMF8.js  index-DAqDhONt.css  index-DSVyYojO.css  index-DvS_pT4g.js
