[package]
name = "um-device-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "tracing"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
google-sheets4 = "5.0.5"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.4.13", features = ["buffer", "timeout", "limit"] }
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.3", features = ["serde"] }
